Fix share button on mobile

--- a/surveys/2018/website/src/stylesheets/_blocks.scss
+++ b/surveys/2018/website/src/stylesheets/_blocks.scss
@@ -21,16 +21,27 @@
     }
 }
 
-.block__title {
+.Block__Title {
     padding-bottom: $spacing/2;
     border-bottom: 1px dashed $border-color;
     margin-bottom: $spacing;
     display: flex;
     align-items: center;
+    @include small {
+        justify-content: space-between;
+    }
 }
-.block__title__text {
+
+.Block__Title__Text {
     margin-bottom: 0;
+    @include small {
+        opacity: 1;
+        transition: all 300ms ease-in;
+        .Block__Title--open & {
+            opacity: 0.2;
+        }
+    }
 }
-.block__title__share {
+.Block__Title__Share {
     margin-left: $spacing/2;
 }
