--- a/surveys/2018/website/src/stylesheets/_share.scss
+++ b/surveys/2018/website/src/stylesheets/_share.scss
@@ -21,11 +21,22 @@
     transition: all 500ms cubic-bezier(0.87, -0.41, 0.19, 1.44);
     transform: scale(0.8);
     opacity: 0;
-
     .share-popup-visible & {
         opacity: 1;
         pointer-events: auto;
-        // left: 120%;
+        @include small{
+            &.share__link--twitter {
+                transform: translateX(-400%) scale(1);
+            }
+            &.share__link--facebook {
+                transform: translateX(-380%) scale(1);
+            }
+            &.share__link--email {
+                transform: translateX(-340%) scale(1);
+            }
+
+        }
+        @include medium-large{
         &.share__link--twitter {
             transform: translateX(280%) scale(1);
         }
@@ -35,6 +46,7 @@
         &.share__link--email {
             transform: translateX(390%) scale(1);
         }
+    }
     }
 }
 
